identity added, registration completed, login page done but codes are not written

--- a/MysteriousEncyclopedia/appsettings.json
+++ b/MysteriousEncyclopedia/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "connection": "Server=DESKTOP-NKLMS7G\\MSSQLSERVER01;initial Catalog=MysteriousEncyclopediaDb;integrated Security=true;TrustServerCertificate=True;"
+    "connection": "Server=DESKTOP-NKLMS7G\\MSSQLSERVER01;initial Catalog=MysteriousEncyclopediaDb;integrated Security=true;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
