--- a/MysteriousEncyclopedia/MysteriousEncyclopedia.csproj
+++ b/MysteriousEncyclopedia/MysteriousEncyclopedia.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<PackageReference Include="AspNetCore.Identity.DapperOrm" Version="6.0.0" />
 		<PackageReference Include="Dapper" Version="2.1.15" />
+		<PackageReference Include="MailKit" Version="4.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
